[gd_scene load_steps=13 format=3 uid="uid://dodx7mrraq275"]

[ext_resource type="Script" path="res://src/player/player_controller/player_controller.gd" id="1_ytb3e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_dcen8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_f2l8f"]
[ext_resource type="Texture2D" uid="uid://cnhwsj2csyyv2" path="res://assets/ui/crosshairs/crosshair118.png" id="3_meiq7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_agkdf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ual88"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_wbtjs"]
[ext_resource type="PackedScene" uid="uid://di3rh8wnta81u" path="res://src/player/LlamaMesh.tscn" id="7_j8066"]

[sub_resource type="BoxShape3D" id="BoxShape3D_757ue"]
size = Vector3(1.6, 2.9, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q44h5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kusuk"]
size = Vector3(1, 0.959473, 1.6)

[sub_resource type="SphereShape3D" id="SphereShape3D_rikvn"]
radius = 5.0

[node name="PlayerController" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 127
floor_max_angle = 0.523599
script = ExtResource("1_ytb3e")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_dcen8")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("3_f2l8f")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("4_agkdf")
initial_state = NodePath("OnGround")

[node name="OnGround" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("4_agkdf")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Movement/OnGround"]
script = ExtResource("5_ual88")

[node name="toWalking" type="Node" parent="StateChart/Root/Movement/OnGround/Idle"]
script = ExtResource("6_wbtjs")
to = NodePath("../../Walking")
delay_in_seconds = "0.0"

[node name="Walking" type="Node" parent="StateChart/Root/Movement/OnGround"]
script = ExtResource("5_ual88")

[node name="toIdle" type="Node" parent="StateChart/Root/Movement/OnGround/Walking"]
script = ExtResource("6_wbtjs")
to = NodePath("../../Idle")
delay_in_seconds = "0.0"

[node name="InAir" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("4_agkdf")
initial_state = NodePath("Jumping")

[node name="Jumping" type="Node" parent="StateChart/Root/Movement/InAir"]
script = ExtResource("5_ual88")

[node name="Falling" type="Node" parent="StateChart/Root/Movement/InAir"]
script = ExtResource("5_ual88")

[node name="InWater" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("4_agkdf")
initial_state = NodePath("IdleSwim")

[node name="IdleSwim" type="Node" parent="StateChart/Root/Movement/InWater"]
script = ExtResource("5_ual88")

[node name="Swim" type="Node" parent="StateChart/Root/Movement/InWater"]
script = ExtResource("5_ual88")

[node name="IdleDive" type="Node" parent="StateChart/Root/Movement/InWater"]
script = ExtResource("5_ual88")

[node name="Dive" type="Node" parent="StateChart/Root/Movement/InWater"]
script = ExtResource("5_ual88")

[node name="Abilities" type="Node" parent="StateChart/Root"]
script = ExtResource("4_agkdf")
initial_state = NodePath("None")

[node name="None" type="Node" parent="StateChart/Root/Abilities"]
script = ExtResource("5_ual88")

[node name="Spit" type="Node" parent="StateChart/Root/Abilities"]
script = ExtResource("5_ual88")

[node name="Kick" type="Node" parent="StateChart/Root/Abilities"]
script = ExtResource("5_ual88")

[node name="Llama" parent="." instance=ExtResource("7_j8066")]

[node name="KickArea" type="Area3D" parent="Llama"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -8.74228e-09, 1.1, -0.1)
collision_layer = 0
collision_mask = 57

[node name="CollisionShape3D" type="CollisionShape3D" parent="Llama/KickArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96046e-08, 0.35, -1.4)
shape = SubResource("BoxShape3D_757ue")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_q44h5")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.579736, 0.05)
shape = SubResource("BoxShape3D_kusuk")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258819, -0.965926, 0, 0.965926, 0.258819, 0, 0.855111, -0.711177)
shape = SubResource("BoxShape3D_kusuk")

[node name="CameraHPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 0, 0)

[node name="CameraVPivot" type="Node3D" parent="CameraHPivot"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraHPivot/CameraVPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.359, 0.634)
spring_length = 12.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraHPivot/CameraVPivot/SpringArm3D"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 12)
current = true
fov = 80.0

[node name="CollectiblePickupRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectiblePickupRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -1.8)
shape = SubResource("SphereShape3D_rikvn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="AimingUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/AimingUI"]
modulate = Color(1, 1, 1, 0.376471)
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_meiq7")
expand_mode = 3

[node name="SpitCooldownTimer" type="Timer" parent="."]
wait_time = 1.4

[connection signal="state_entered" from="StateChart/Root/Movement/OnGround/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/OnGround/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/OnGround/Walking" to="." method="_on_walking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/OnGround/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="body_entered" from="CollectiblePickupRange" to="." method="_on_collectible_pickup_range_body_entered"]
